--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@lukeed/uuid": "^2.0.0",
     "@popperjs/core": "^2.10.2",
     "cookie": "^0.4.1",
-    "dayjs": "^1.10.7"
+    "dayjs": "^1.10.7",
+    "compression": "^1.7.1",
+    "debounce": "^1.2.1",
+    "lodash": "^4.17.21",
+    "sirv": "^1.0.0",
+    "tippy.js": "^6.3.1"
   }
 }
