--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "@popperjs/core": "^2.10.2",
+    "@sentry/browser": "^6.15.0",
+    "@sentry/tracing": "^6.15.0",
+    "compression": "^1.7.1",
     "cookie": "^0.4.1",
     "dayjs": "^1.10.7",
-    "compression": "^1.7.1",
     "debounce": "^1.2.1",
     "lodash": "^4.17.21",
     "sirv": "^1.0.0",
