--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.10.2",
     "@sentry/browser": "^6.15.0",
     "@sentry/tracing": "^6.15.0",
+    "chart.js": "^3.6.2",
     "compression": "^1.7.1",
     "cookie": "^0.4.1",
     "dayjs": "^1.10.7",
