--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@sveltejs/adapter-cloudflare": "^0.0.1",
     "@sveltejs/kit": "^1.0.0-next.1",
-    "autoprefixer": "^10.4e.0",
+    "autoprefixer": "^10.4.0",
     "concurrently": "^6.4.0",
     "cross-env": "^7.0.3",
     "postcss-cli": "^9.0.2",
