--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.0",
     "concurrently": "^6.4.0",
     "cross-env": "^7.0.3",
+    "postcss": "^8.4.12",
     "postcss-cli": "^9.0.2",
     "svelte": "^3.34.0",
     "tailwindcss": "^2.2.19"
